spacing fix 2

--- a/css/screen.css
+++ b/css/screen.css
@@ -7,8 +7,8 @@
 /* Global Reset */
 
 * {
-  margin: 5%;
-  padding: 0;
+  margin: 0;
+  padding: 1%;
 }
 
 html, body {
